# aurum-edge

./: .env.example  .gitignore  .pre-commit-config.yaml  INSTALL.md  Makefile  QUICKSTART.md  README.md  generate_project.py  pyproject.toml  setup.py
configs/: default.yaml
configs/assets/: nas100_m5.yaml
configs/costs/: costs_default.yaml
configs/execution/: human_in_loop.yaml
configs/labeling/: triple_barrier.yaml
configs/risk/: micro_account.yaml
configs/walkforward/: wf_3m_2w.yaml
data/raw/: README.md
docs/: api_reference.md  architecture.md  operations.md  thesis.md
src/aurum_edge/: __init__.py
src/aurum_edge/backtest/: costs.py  engine.py  metrics.py  walk_forward.py
src/aurum_edge/core/: __init__.py  config.py  logging.py  monitoring.py  timeutils.py
src/aurum_edge/data/: ingest.py  split.py  transform.py  validate.py
src/aurum_edge/decision/: expected_value.py  explain.py  policy.py  signals.py
src/aurum_edge/execution/: human_approval.py  mt5_bridge.py  paper.py
src/aurum_edge/features/: build.py  leakage_guard.py  microstructure.py  returns.py  session.py  trend.py  volatility.py
src/aurum_edge/labeling/: schema.py  triple_barrier.py
src/aurum_edge/models/: calibrate.py  gating.py  registry.py  train.py  tune_optuna.py
src/aurum_edge/pipelines/: build_dataset.py  build_features.py  build_labels.py  run_paper.py  run_walkforward.py  train_model.py
src/aurum_edge/risk/: cooldown.py  kill_switch.py  micro.py  sizing.py
tests/: test_costs.py  test_data_quality.py  test_features.py  test_labels.py  test_leakage.py  test_splits.py
